datasource db {
  provider = "postgresql"
}

generator client {
  provider        = "prisma-client"
  output          = "./generated"
  previewFeatures = ["views"]
}

// =================================================================
// 🏢 ၁။ COMPANY & BRANCH MANAGEMENT (MULTI-TENANT)
// =================================================================

model Company {
  id        String   @id @default(cuid())
  name      String // ဥပမာ - "BiteCraft Food Group"
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  branches  Branch[] // One-to-Many
  users     User[] // One-to-Many (COMPANY_HEAD users linked directly to Company)
  menus     Menu[] // One-to-Many (Master Menus belong to Company)
}

model Branch {
  id        String  @id @default(cuid())
  name      String // ဥပမာ - "ရန်ကုန် (လှည်းတန်းဆိုင်ခွဲ)"
  address   String?
  phone     String?
  companyId String
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)

  // ဆိုင်ခွဲတစ်ခုချင်းစီအောက်တွင် သီးသန့်ရှိမည့် ဒေတာများ
  users          User[]
  menuCategories MenuCategory[]
  tables         Table[]
  orders         Order[]
  discounts      Discount[]
  promoCodes     PromoCode[]

  // Merged from Setting model
  restaurantName    String  @default("")
  currency          String  @default("MMK")
  taxRate           Float   @default(5.0)
  isAcceptingOrders Boolean @default(true)

  latitude  Float?
  longitude Float?

  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
  addonCategories AddonCategory[]
  addons          Addon[]
  menuOnBranches  MenuOnBranch[]
  invoices        Invoice[]
}

// =================================================================
// 👥 ၂။ USERS & AUTHENTICATION
// =================================================================

model User {
  id       Int      @id @default(autoincrement())
  email    String   @unique
  name     String?
  password String
  role     UserRole @default(STAFF)

  branchId String?
  branch   Branch? @relation(fields: [branchId], references: [id], onDelete: SetNull)

  companyId String?
  company   Company? @relation(fields: [companyId], references: [id], onDelete: Cascade)

  isActive Boolean @default(true)

  // Password reset fields combined directly into User
  resetToken        String?   @unique
  resetTokenExpires DateTime?

  // Refresh token fields combined directly into User
  refreshToken        String?   @unique
  refreshTokenExpires DateTime?
  refreshTokenRevoked Boolean   @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

enum UserRole {
  COMPANY_HEAD
  BRANCH_ADMIN
  STAFF
  CUSTOMER
}

// =================================================================
// 🍔 ၃။ MENU & CATEGORIES (BRANCH SPECIFIC)
// =================================================================

model MenuCategory {
  id          String     @id @default(cuid())
  name        String
  description String?
  isActive    Boolean    @default(true)
  menuItems   MenuItem[]

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model MenuItem {
  id              String          @id @default(cuid())
  name            String
  description     String?
  price           Float
  imageUrl        String?
  isActive        Boolean         @default(true)
  isDeleted       Boolean         @default(false)
  categoryId      String
  category        MenuCategory    @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  addonCategories AddonCategory[] // Implicit Many-to-Many
  discountId      String?
  discount        Discount?       @relation(fields: [discountId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model AddonCategory {
  id          String     @id @default(cuid())
  name        String
  minSelect   Int        @default(0)
  maxSelect   Int        @default(1)
  branchId    String
  branch      Branch     @relation(fields: [branchId], references: [id], onDelete: Cascade)
  addons      Addon[]
  menuItems   MenuItem[] // Implicit Many-to-Many
  masterMenus Menu[] // Implicit Many-to-Many with HQ Master Menus
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
}

model Addon {
  id              String        @id @default(cuid())
  name            String
  price           Float         @default(0.0)
  isActive        Boolean       @default(true)
  branchId        String?
  branch          Branch?       @relation(fields: [branchId], references: [id], onDelete: Cascade)
  addonCategoryId String
  addonCategory   AddonCategory @relation(fields: [addonCategoryId], references: [id], onDelete: Cascade)
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

model Discount {
  id        String     @id @default(cuid())
  name      String
  type      String
  value     Float
  startDate DateTime?
  endDate   DateTime?
  isActive  Boolean    @default(true)
  menuItems MenuItem[]

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Table {
  id       String  @id @default(cuid())
  number   String
  qrUrl    String?
  isActive Boolean @default(true)

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  orders    Order[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([number, branchId])
}

model Order {
  id              String      @id @default(cuid())
  orderNumber     Int         @unique @default(autoincrement())
  status          OrderStatus @default(PENDING)
  totalAmount     Float
  taxAmount       Float
  finalAmount     Float
  notes           String?
  tableId         String?
  table           Table?      @relation(fields: [tableId], references: [id])
  isBillRequested Boolean     @default(false)

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  items     Json
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  invoiceId String?
  invoice   Invoice? @relation(fields: [invoiceId], references: [id], onDelete: SetNull)
}

enum OrderStatus {
  PENDING
  CONFIRMED
  COOKING
  READY
  DELIVERED
  PAID
  CANCELLED
}

enum PaymentStatus {
  UNPAID
  PAID
  REFUNDED
}

model Invoice {
  id            String        @id @default(cuid())
  invoiceNumber String        @unique // e.g. INV-2026-0001
  paymentMethod String // CASH, KPAY, CB_PAY, CREDIT_CARD
  paymentStatus PaymentStatus @default(UNPAID)

  subTotal       Float
  taxAmount      Float
  discountAmount Float @default(0.0)
  finalAmount    Float

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  orders Order[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Menu {
  id          String  @id @default(cuid())
  name        String
  description String?
  basePrice   Float
  image       String?
  isActive    Boolean @default(true)

  companyId String?
  company   Company? @relation(fields: [companyId], references: [id], onDelete: Cascade)

  branches        MenuOnBranch[]
  addonCategories AddonCategory[] // Implicit Many-to-Many with Branch local AddonCategories

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model MenuOnBranch {
  menuId   String
  branchId String
  menu     Menu   @relation(fields: [menuId], references: [id], onDelete: Cascade)
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  isAvailable Boolean @default(true)

  @@id([menuId, branchId])
}

view BranchDailySales {
  branchId      String
  branchName    String
  date          DateTime
  totalRevenue  Float
  totalInvoices Int

  @@unique([branchId, date])
}

model PromoCode {
  id             String    @id @default(cuid())
  code           String    @unique
  discountType   String // "PERCENTAGE" or "FIXED_AMOUNT"
  discountValue  Float
  minOrderAmount Float?
  maxUsageLimit  Int?
  usedCount      Int       @default(0)
  expiryDate     DateTime?
  isActive       Boolean   @default(true)

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
