// ==========================================
// Omnichannel Restaurant POS - Project Schema
// (Excluding createdAt & updatedAt timestamps)
// Paste this code into https://dbdiagram.io/d
// ==========================================

Table COMPANY {
  companyId string [pk]
  name string
}

Table BRANCH {
  branchId string [pk]
  companyId string [ref: > COMPANY.companyId]
  name string
  address string
  phone string
  restaurantName string
  currency string
  taxRate float
  isAcceptingOrders boolean
}

Table USER {
  id int [pk]
  email string [unique]
  name string
  password string
  role UserRole
  companyId string [ref: > COMPANY.companyId]
  branchId string [ref: > BRANCH.branchId]
  isActive boolean
}

Table MENU_CATEGORY {
  id string [pk]
  branchId string [ref: > BRANCH.branchId]
  name string
  description string
  isActive boolean
}

Table MENU_ITEM {
  id string [pk]
  categoryId string [ref: > MENU_CATEGORY.id]
  discountId string [ref: > DISCOUNT.id]
  name string
  description string
  price float
  imageUrl string
  isActive boolean
  isDeleted boolean
}

Table ADDON_CATEGORY {
  id string [pk]
  branchId string [ref: > BRANCH.branchId]
  name string
  minSelect int
  maxSelect int
}

Table ADDON {
  id string [pk]
  branchId string [ref: > BRANCH.branchId]
  addonCategoryId string [ref: > ADDON_CATEGORY.id]
  name string
  price float
  isActive boolean
}

Table TABLE {
  id string [pk]
  branchId string [ref: > BRANCH.branchId]
  number string
  qrUrl string
  isActive boolean
}

Table ORDER {
  id string [pk]
  orderNumber int [unique]
  branchId string [ref: > BRANCH.branchId]
  tableId string [ref: > TABLE.id]
  invoiceId string [ref: > INVOICE.id]
  status OrderStatus
  totalAmount float
  taxAmount float
  finalAmount float
  items json
  notes string
  isBillRequested boolean
}

Table INVOICE {
  id string [pk]
  invoiceNumber string [unique]
  branchId string [ref: > BRANCH.branchId]
  paymentMethod string
  paymentStatus PaymentStatus
  subTotal float
  taxAmount float
  discountAmount float
  finalAmount float
}

Table DISCOUNT {
  id string [pk]
  branchId string [ref: > BRANCH.branchId]
  name string
  type string
  value float
  startDate datetime
  endDate datetime
  isActive boolean
}

Enum UserRole {
  COMPANY_HEAD
  BRANCH_ADMIN
  STAFF
}

Enum OrderStatus {
  PENDING
  CONFIRMED
  COOKING
  READY
  DELIVERED
  PAID
  CANCELLED
}

Enum PaymentStatus {
  UNPAID
  PAID
  REFUNDED
}
